tests/good/json1.opt
-format json -jsonpath obj.field.array
