tests/bad/json_array.opt
-format json -jsonpath obj.field
